--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+config/artist_mapping.json
+config/album_mapping.json
+config/track_mapping.json
 config/apple-music.xml
 config/plexdb.sqlite
 config/plexdb.sqlite-shm
